UI: Fixes UI alignments
Fixes UI alignment and removes transition animations on page load.

--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -47,61 +47,4 @@
             padding-right: 10px;
         }
     }
-    .dashboard-card-pools {
-        .legends {
-            padding-top: 20px;
-        }
-        .legend {
-            font-size: 11px;
-            display: block;
-            padding-bottom: 10px;
-        }
-        .legend-square {
-            padding-right: 10px;
-        }
-        .legend-l0 {
-            color: #cc0000;
-        }
-        .legend-l1 {
-            color: #EC7A08;
-        }
-        .legend-l2 {
-            color: #F9D67A;
-        }
-        .legend-l3 {
-            color: #d4f0fa;
-        }
-        .heat-map-title {
-            display: block;
-            font-size: 13px;
-            font-weight: bold;
-            padding-bottom: 5px;
-        }
-        .heat-map {
-            height: 160px;
-            width: 160px;
-        }
-        .heat-l0 {
-            background-color: #cc0000;
-        }
-        .heat-l1 {
-            background-color: #EC7A08;
-        }
-        .heat-l2 {
-            background-color: #F9D67A;
-        }
-        .heat-l3 {
-            background-color: #d4f0fa;
-        }
-        .square {
-            float: left;
-            position: relative;
-            width: 18.5%;
-            padding-bottom: 18.5%;
-            margin: 0.7%;
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-    }
 }
